# zbot-eyes

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
docs/: clipboard.md
docs/diagrams/: architecture.dot  gui_flow.dot  pipeline_segmentation.dot
models/: README.md
scripts/: install.sh
secrets/: README.md
src/net_inspector/: __init__.py  cli.py  config.py  gui.py  llm_glm.py  realtime.py  reporting.py  segmenter.py
src/net_inspector/detectors/: __init__.py  base.py  deep.py  fast.py
src/net_inspector/synth/: __init__.py  generate.py
src/net_inspector/utils/: __init__.py  annotate.py  io.py  logging_utils.py
